Closed
Bug 466433
Opened 17 years ago
Closed 17 years ago
Crash [@ CallQueryInterface<nsIFrame,nsIScrollableViewProvider>] with MozMousePixelScroll event and removing window
Categories
(Core :: DOM: UI Events & Focus Handling, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: martijn.martijn, Assigned: smaug)
References
Details
(Keywords: crash, testcase, verified1.9.1)
Crash Data
Attachments
(2 files)
|
522 bytes,
text/html
|
Details | |
|
1.22 KB,
patch
|
roc
:
review+
roc
:
superreview+
beltzner
:
approval1.9.1+
|
Details | Diff | Splinter Review |
See testcase.
The iframe src consists of this:
<script>
window.addEventListener('MozMousePixelScroll', function() {window.frameElement.parentNode.removeChild(window.frameElement)}, true);
</script>
http://crash-stats.mozilla.com/report/index/d9b794f0-27a0-4a79-9676-9bac62081124?p=1
0 xul.dll CallQueryInterface<nsIFrame,nsIScrollableViewProvider> obj-firefox/dist/include/xpcom/nsISupportsUtils.h:203
1 xul.dll xul.dll@0x89f867
2 xul.dll xul.dll@0x2f2690
3 @0x2e643bf
4 @0x12f4d3
| Assignee | ||
Comment 1•17 years ago
|
||
My guess is that pixel scrolling must be disabled to reproduce the crash on
Mac. The fix is probably to use nsWeakFrame to check if frame is deleted
while dispatching MozMousePixelScroll event
| Assignee | ||
Comment 2•17 years ago
|
||
This is what we should do IMO.
Other option would be to check mCurrentTarget, but that might change because
of some other reason than deletion.
(BTW, mCurrentTarget is also an nsWeakFrame, so it never points to a deleted frame.)
Assignee: nobody → Olli.Pettay
Status: NEW → ASSIGNED
Attachment #349741 -
Flags: superreview?(roc)
Attachment #349741 -
Flags: review?(roc)
Attachment #349741 -
Flags: superreview?(roc)
Attachment #349741 -
Flags: superreview+
Attachment #349741 -
Flags: review?(roc)
Attachment #349741 -
Flags: review+
| Assignee | ||
Updated•17 years ago
|
Attachment #349741 -
Flags: approval1.9.1?
Comment 3•17 years ago
|
||
Comment on attachment 349741 [details] [diff] [review]
proposed patch
a191=beltzner
Attachment #349741 -
Flags: approval1.9.1? → approval1.9.1+
| Assignee | ||
Updated•17 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Whiteboard: [needs-1.9.1-landing]
| Reporter | ||
Comment 4•17 years ago
|
||
Verified fixed, using:
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.2a1pre) Gecko/20081204 Minefield/3.2a1pre
Status: RESOLVED → VERIFIED
Updated•16 years ago
|
Keywords: fixed1.9.1
Comment 6•16 years ago
|
||
verified FIXED on Shiretoko: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1b4pre) Gecko/20090422 Shiretoko/3.5b4pre ID:20090422042031
Keywords: fixed1.9.1 → verified1.9.1
Updated•14 years ago
|
Crash Signature: [@ CallQueryInterface<nsIFrame,nsIScrollableViewProvider>]
Updated•7 years ago
|
Component: Event Handling → User events and focus handling
You need to log in
before you can comment on or make changes to this bug.
Description
•