 Bug 466433 -  Crash [@ CallQueryInterface<nsIFrame,nsIScrollableViewProvider>] with MozMousePixelScroll event and removing window, r+sr=roc